chore: fixed horizontal scroll

--- a/src/pages/nerdlog.module.scss
+++ b/src/pages/nerdlog.module.scss
@@ -5,7 +5,7 @@
 
 .twoColumnAlt {
   display: grid;
-  grid-template-columns: 60% 35%;
+  grid-template-columns: 55% 35%;
   grid-gap: 2rem;
 }
 
